Add recycler view for categories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
     <string name="app_name">FactsApp</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="hello_world">Hello</string>
+    <string name="name">Name</string>
+    <string name="say_hi">Say hi</string>
+    <string name="error_msg">Name field must be completed</string>
+
+    <string name="lets_go">Let\'s go!</string>
 </resources>
