Add profile, navbar, facts, landscape, logout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="error_msg">Name field must be completed</string>
 
     <string name="lets_go">Let\'s go!</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="welcome_to_factsapp">Welcome to FactsApp</string>
 </resources>
